# menu

./: Cargo.toml  Rocket.toml
data/: extensions.json
public/scripts/: edit.js  img_upload_page.js  svg_detect.js  view.js  view_monitor.js
public/styles/: styles.css
src/: config.rs  main.rs  svg_parse.rs  ws_handler.rs
src/pages/: download_page.rs  edit_page.rs  get_file.rs  get_img_file.rs  index.rs  index_page.rs  mod.rs  upload_image.rs  upload_page.rs  view_monitor.rs  view_page.rs
src/pages/templates/: edit.html.hbs  img_set.html  img_set.html.hbs  img_view.html.hbs  view.html.hbs
templates/: img_set.stpl  img_view.stpl
