[package]
name = "menu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
rocket = "0.5.0-rc.2"
ws = "0.9.2"
xmltree = "0.10.3"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
handlebars = "4.3.3"